Change loading screen position to inherit

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body.dark-mode {
 
 /* شاشة التحميل */
 .loading-screen {
-    position: fixed;
+    position: inherit;
     top: 0;
     left: 0;
     width: 100%;
